refatoração de código

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 
-security.token.secret=DEFINIR_SECRET_KEY_@123#
+security.token.secret.company=JAVAGAS_@123#COMPANY
 security.token.secret.candidate=JAVAGAS_@123#CANDIDATE
